--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "author": "CCherry07",
   "license": "MIT",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "type": "module",
   "exports": {
     ".": {
@@ -40,7 +40,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch src",
-    "release": "bumpp && npm publish"
+    "release": "bumpp && build && npm publish --registry=https://registry.npmjs.org/"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
