--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch src",
-    "release": "bumpp && build && npm publish --registry=https://registry.npmjs.org/"
+    "release": "bumpp && npm run build && npm publish --registry=https://registry.npmjs.org/"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
