--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "@types/semver": "^7.5.6",
     "bumpp": "^9.2.1",
     "rollup": "^4.8.0",
     "tsup": "^8.0.1",
@@ -54,6 +55,7 @@
     "@babel/traverse": "^7.23.5",
     "@vue/compiler-sfc": "^3.3.11",
     "magic-string": "^0.30.5",
+    "semver": "^7.5.4",
     "unplugin": "^1.5.1"
   },
   "repository": {
