feat: add @babel/types

--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
   },
   "dependencies": {
     "@babel/traverse": "^7.23.5",
+    "@babel/types": "^7.23.6",
     "@rollup/pluginutils": "^5.1.0",
+    "@types/babel__traverse": "^7.20.4",
     "@vue/compiler-sfc": "^3.3.11",
     "magic-string": "^0.30.5",
     "semver": "^7.5.4",
